--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -160,8 +160,7 @@
 
   .nav-icons-mobile {
     display: flex;
-    flex-grow: 1;
-    justify-content: flex-end;
+    justify-content: flex-start;
   }
 
   .nav-icons-search-cart {
