--- a/src/Components/User/UserProfileStyles.css
+++ b/src/Components/User/UserProfileStyles.css
@@ -55,4 +55,45 @@ background-color: white;
 margin-left: 300px;
 }
 
+.description {
+  padding-top: 10px;
+  margin-right: 60px;
+  width: 115px;
+  
+ color: blue;
 
+}
+.description span {
+  display: block;
+  font-size: 14px;
+  color: #43484D;
+  font-weight: 400;
+}
+ 
+.description span:first-child {
+  margin-bottom: 5px;
+}
+.description span:last-child {
+  font-weight: 300;
+  margin-top: 8px;
+  color: #86939E;
+}
+
+.linkstyling{
+color: #43484D;
+
+}
+
+.linkstyling:hover{
+color: red;
+}
+
+
+.parcelstatus{
+
+
+  padding-top: 20px;
+  margin-right: 60px;
+  padding-right: 80px;
+  padding-left: 60px;
+}
